--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -70,6 +70,7 @@ a {
   margin: 0 auto;
   img {
     max-width: 100%;
+
   }
 }
 .navigation {
@@ -108,7 +109,7 @@ a {
 }
 .hero-header {
   padding: 0 0 64px;
-  max-width: 980px;
+  text-align: center;
 }
 .headline {
   font-size: 36px;
